updated copy. improved layout of images. added contact section.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id="section1">
@@ -13,15 +14,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<div id="contact-btn">
-						<div id="contact1">CONTACT</div><div id="contact2"><i class="icon-envelope"></i> US</div>
-					</div>
+					<a href="#contact">
+						<div id="contact-btn">
+							<div id="contact1">CONTACT</div><div id="contact2"><i class="icon-envelope"></i> US</div>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div class="row" id="header-names">
 				<div class="col-xs-12">
 					<h1>Curry Dvorak</h1>
-					<h3>Architects Group</h3>
+					<h3>Consulting Group</h3>
 				</div>
 			</div>
 		</div>
@@ -31,39 +34,40 @@
 		<div class="section-bar">
 			<div class="row">
 				<div class="col-xs-12">
-					<h4>MODERNE ARCHITECTUUR</h4>
-					<h2>ONZE SPECIALITEITEN</h2>
+					<h4>Expert CONSULTING</h4>
+					<h2>MEDIA SPECIALISTS</h2>
+					<div class="green-bar"></div>
+				</div>
+			</div>
+		</div>
+
+		<div id="section2" class="section-info">
+			<div class="row">
+				<div class="col-md-4 section-details">
+					<h1 class="section-number">01.</h1>
+					<h2 class="section-header">Analysis</h2>
+					<h4 class="section-subheader">Expert media deconstruction and insights</h4>
+					<div class="section-text">
+						<p>Unique understanding of the media landscape and it's influencing actors.</p>
+					</div>
+				</div>
+				<div class="col-md-8 section-image">
+					<img src="images/nTr1589kTgyXCOdStCGm_MikaRuusunen.png" class="img-responsive" alt="">
 				</div>
 			</div>
 		</div>
 
 		<div id="section3" class="section-info">
 			<div class="row">
-				<div class="col-xs-4">
-					<h1 class="section-number">01.</h1>
-					<h2 class="section-header">WONINGBOUW</h2>
-					<h4 class="section-subheader">NIEUBOUW EN VERBOUWINGEN VOOR PARTICULIEREN</h4>
-					<div class="section-text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					</div>
-				</div>
-				<div class="col-xs-8">
-					<img src="images/nTr1589kTgyXCOdStCGm_MikaRuusunen.png" class="img-responsive" alt="">
-				</div>
-			</div>
-		</div>
-
-		<div id="section4" class="section-info">
-			<div class="row">
-				<div class="col-xs-8">
+				<div class="col-md-8 section-image">
 					<img src="images/photo-1428976365951-b70e0fa5c551.png" class="img-responsive" alt="">
 				</div>
-				<div class="col-xs-4">
+				<div class="col-md-4 section-details">
 					<h1 class="section-number">02.</h1>
-					<h2 class="section-header">ALLE STIJLEN</h2>
-					<h4 class="section-subheader">NIEUBOUW EN VERBOUWINGEN VOOR PARTICULIEREN</h4>
+					<h2 class="section-header">foresight</h2>
+					<h4 class="section-subheader">unparalleled prediction of global events</h4>
 					<div class="section-text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p>The Currey Dvorak Group's model-based predictions of news worthy events are unmatched in their industry.</p>
 					</div>
 				</div>
 			</div>
@@ -71,15 +75,15 @@
 
 		<div id="section4" class="section-info">
 			<div class="row">
-				<div class="col-xs-4">
+				<div class="col-md-4 section-details">
 					<h1 class="section-number">03.</h1>
-					<h2 class="section-header">APPARTEMENTEN</h2>
-					<h4 class="section-subheader">NIEUBOUW EN VERBOUWINGEN VOOR PARTICULIEREN</h4>
+					<h2 class="section-header">Results</h2>
+					<h4 class="section-subheader">Revenue growth at a higher level</h4>
 					<div class="section-text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p>Proven track record of increased profitability for clients. Most of our clients experience record breaking sales figures. Just saying. </p>
 					</div>
 				</div>
-				<div class="col-xs-8">
+				<div class="col-md-8 section-image">
 					<img src="images/negativespace-8.png" class="img-responsive" alt="">
 				</div>
 			</div>
@@ -88,9 +92,39 @@
 		<div class="section-bar">
 			<div class="row">
 				<div class="col-xs-12">
-					<h4>VRAGEN OF OPMERKINGEN</h4>
-					<h2>NEEM GERUST CONTACT OP</h2>
+					<h4>business consultation</h4>
+					<h2>contact the curry dvorak group</h2>
+					<div class="green-bar none992"></div>
 				</div>
+			</div>
+		</div>
+
+		<div class="section-contact" id="contact">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="green-bar"></div>
+					<span class="contact-link"><a href="https://twitter.com/adamcurry" target="_blank">@adamcurry</a></span>
+					<span class="contact-title"><a href="https://twitter.com/adamcurry" target="_blank">ADAM CURRY on TWITTER</a></span>
+				</div>
+				<div class="col-md-4">
+					<div class="green-bar"></div>
+					<span class="contact-link"><a href="https://twitter.com/therealdvorak" target="_blank">@therealdvorak</a></span>
+					<span class="contact-title"><a href="https://twitter.com/therealdvorak" target="_blank">JOHN C. DVORAK on TWITTER</a></span>
+				</div>
+				<div class="col-md-4">
+					<div class="green-bar"></div>
+					<span class="contact-link"><a href="http://www.noagendashow.com/" target="_blank">www.noagendashow.com</a></span>
+					<span class="contact-title"><a href="http://www.noagendashow.com/" target="_blank">NO AGENDA WEBSITE</a></span>
+				</div>
+			</div>
+		</div>
+
+		<div class="row" id="section-my-info">
+			<div class="col-xs-6 danny-name">
+			<a href="http://www.dannypule.com" target="_blank">Danny Pule <span id="year"></span></a>
+			</div>
+			<div class="col-xs-6 danny-company">
+				<a href="http://www.dannypule.com" target="_blank">Kojiku Wan Media</a>
 			</div>
 		</div>
 
