deleted unused files. added font awesome send icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Architect Portfolio</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/font-awesome.css">
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 </head>
@@ -16,7 +16,7 @@
 				<div class="col-xs-12">
 					<a href="#contact">
 						<div id="contact-btn">
-							<div id="contact1">CONTACT</div><div id="contact2"><i class="icon-envelope"></i> US</div>
+							<div id="contact1">CONTACT</div><div id="contact2"><i class="fa fa-paper-plane"></i></div>
 						</div>
 					</a>
 				</div>
