fixed minor copy and layout issues

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Architect Portfolio</title>
+	<title>Curry Dvorak Consulting Group</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
@@ -67,7 +67,7 @@
 					<h2 class="section-header">foresight</h2>
 					<h4 class="section-subheader">unparalleled prediction of global events</h4>
 					<div class="section-text">
-						<p>The Currey Dvorak Group's model-based predictions of news worthy events are unmatched in their industry.</p>
+						<p>The Curry Dvorak Group's model-based predictions of news worthy events are unmatched in their industry.</p>
 					</div>
 				</div>
 			</div>
